CustomObjects/objects/blng__PaymentAllocationInvoiceLine__c.object
<CustomObject>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipName>PaymentAllocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>blng__Payment__c</referenceTo>
        <relationshipLabel>Payment Allocations (Invoice Line)</relationshipLabel>
        <relationshipName>PaymentAllocations_del</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TypeAllocationUnallocation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Unallocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unallocated?</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Allocation (Invoice Line)</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations (Invoice Line)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>